--- a/style.css
+++ b/style.css
@@ -32,13 +32,6 @@ body {
   font-family: "Kumbh Sans";
 }
 
-@media screen and (min-width: 750px) {
-  .body {
-    flex-direction: row;
-    justify-content: center;
-  }
-}
-
 hr {
   background-color: var(--divider);
   height: 1px;
@@ -54,10 +47,13 @@ hr {
   margin: 0 1rem 7rem 1rem;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 850px) {
   .container {
+    min-width: var(--minDesktopWidth, 850px);
+    min-height: 70vh;
     flex-direction: row;
-    margin: auto;
+    justify-items: center;
+    margin: 0rem 1rem 7rem 1rem;
   }
 }
 
@@ -86,9 +82,16 @@ hr {
   left: 50%;
   transform: translate(-50%, 30%);
 }
-@media screen and (min-width: 750px) {
-  .background-image {
-    margin-top: 0;
+@media screen and (min-width: 850px) {
+  .image {
+    width: 100%;
+    height: 100%;
+  }
+
+  .bg-image {
+    width: 80%;
+    height: 65%;
+    transform: translate(-62%, 20%);
   }
 }
 
@@ -101,28 +104,25 @@ hr {
   z-index: 0;
   width: calc(var(--minWidth) - 2rem);
 }
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 850px) {
   .faq {
-    width: 70%;
-    height: 100%;
-    margin: 2rem 2rem 2rem -14rem;
-    padding: 1rem 1rem 1rem 14rem;
-    border-radius: 2rem;
+    margin: 0rem 1rem 0 -22.5rem;
+    padding: 0rem 01rem 0rem 17rem;
+    width: calc(var(--minDesktopWidth) - 2rem);
   }
 }
-
 .faq-header {
   text-align: center;
   color: var(--text-darkBlue);
   font-weight: 700;
+  letter-spacing: 1px;
 }
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 850px) {
   .faq-header {
+    margin: 2rem 0rem 0rem 1rem;
     text-align: left;
-    margin-left: 0.75rem;
   }
 }
-
 .faq-block {
   text-align: left;
   font-weight: 400;
