--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --minDesktopWidth: 850px; /* DESKTOP MIN WIDTH */
+  --minDesktopWidth: 53.125rem; /* DESKTOP MIN WIDTH */
   --minWidth: 23.475rem; /* MOBILE MIN WIDTH */
   /****
 
@@ -50,7 +50,6 @@ hr {
 @media screen and (min-width: 850px) {
   .container {
     min-width: var(--minDesktopWidth, 850px);
-    min-height: 70vh;
     flex-direction: row;
     justify-items: center;
     margin: 0rem 1rem 7rem 1rem;
@@ -59,11 +58,16 @@ hr {
 
 .image-block {
   z-index: 2;
-  /* margin-top: 2rem; */
   width: 80%;
   height: 15rem;
   position: relative;
 }
+/* @media screen and (min-width: 850px) {
+  .image-block {
+    padding: 3rem 0rem 3rem 0rem;
+    margin: 3rem 0rem 3rem 0rem;
+  }
+} */
 
 .image {
   position: absolute;
@@ -89,9 +93,9 @@ hr {
   }
 
   .bg-image {
-    width: 80%;
-    height: 65%;
-    transform: translate(-62%, 20%);
+    width: 70%;
+    height: 55%;
+    transform: translate(-50%, 30%);
   }
 }
 
@@ -106,8 +110,8 @@ hr {
 }
 @media screen and (min-width: 850px) {
   .faq {
-    margin: 0rem 1rem 0 -22.5rem;
-    padding: 0rem 01rem 0rem 17rem;
+    margin: 0rem 5rem 0 -20rem;
+    padding: 0rem 1rem 2rem 22rem;
     width: calc(var(--minDesktopWidth) - 2rem);
   }
 }
@@ -119,10 +123,11 @@ hr {
 }
 @media screen and (min-width: 850px) {
   .faq-header {
-    margin: 2rem 0rem 0rem 1rem;
+    margin: 2rem 0rem 0rem 0.9rem;
     text-align: left;
   }
 }
+
 .faq-block {
   text-align: left;
   font-weight: 400;
@@ -134,17 +139,12 @@ details {
   color: var(--text-veryDark);
 }
 
-details[open] > .answer {
-  margin: 0.75rem 1.5rem 1rem 0;
-  color: var(--text-dark);
-  line-height: 1.4;
-}
-
 details > summary {
   cursor: pointer;
   display: flex;
   justify-content: space-between;
   color: var(--text-veryDark);
+  transition: all 0.5s;
 }
 
 details[open] summary {
@@ -155,6 +155,14 @@ details[open] summary {
 
 details[open] .arrow {
   transform: rotate(180deg);
+  transition: all 0.5s;
+}
+
+details[open] > .answer {
+  margin: 0.75rem 1.5rem 1rem 0;
+  color: var(--text-dark);
+  line-height: 1.4;
+  transition: all 0.5s;
 }
 
 .attribution {
